# cast-desktop

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: release.yml
docs/design/: design-language.md  palette-dawn-dusk.md  palette-preview.html
lsp-sidecar/: index.ts  package.json
server/: constants.ts  index.ts  package-lock.json  package.json
server/__tests__/: agentHallucinations.test.ts  agentRuns.test.ts  analyticsSession.test.ts  bug-fixes-2026-04-03.test.ts  castFs.test.ts  costSummary.test.ts  dbContract.test.ts  dispatch.test.ts  files.test.ts  git.test.ts  health.test.ts  injectionLog.test.ts  memory.test.ts  paneBindings.test.ts  phase975c.test.ts  plans.test.ts  projectFs.test.ts  routines.test.ts  routing.test.ts  sessionCost.test.ts  sessions-delete.test.ts  sqliteExplorer.test.ts  system.test.ts  taskQueue.test.ts  workLogStream.test.ts
server/parsers/: memory.ts  projectPath.ts  sessions.ts
server/routes/: agentHallucinations.ts  git.ts  (+36 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/cast-hooks/: cast-pane-bind.bats  cast-pane-bind.sh  cast-pane-unbind.sh
src-tauri/src/: lib.rs  lsp.rs  main.rs  menu.rs  process.rs  pty.rs  session.rs
tests/: ide-4-lsp-sidecar.bats
(+226 files in other folders)
