[package]
name = "cast-desktop"
version = "0.1.0"
description = "Cast Desktop — CAST v8 desktop app"
authors = ["edkubiak"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "cast_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
dirs = "6"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
